--- a/code/omnet/simulations/omnetpp.ini
+++ b/code/omnet/simulations/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
-network = Tictoc
+network = Network
 cpu-time-limit = 60s
-#debug-on-errors = true
+debug-on-errors = false
 
-**.tic.sendInitialMessage = true
+
