Added ini files, fixed some leaks in code.

--- a/code/omnet/simulations/omnetpp.ini
+++ b/code/omnet/simulations/omnetpp.ini
@@ -1,7 +1,16 @@
 [General]
 network = Network
-cpu-time-limit = 60s
 debug-on-errors = false
+#1 rng per service center
+num-rngs = 3
+
+**.disk[*].rng-0 = 0
+**.processor[*].rng-0 = 1
+**.remote_server.rng-0 = 2
+
+
+ 
+
 
 
 
