added ini files for test an simulation

--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -5,14 +5,15 @@ debug-on-errors = false
 num-rngs = 3
 repeat = 10
 seed-set = ${repetition}
-sim-time-limit =3600s
+sim-time-limit =4200s #6 hours + warmup
+warmup-period = 600s
 
 **.disk[*].rng-0 = 0
 **.processor[*].rng-0 = 1
 **.remote_server.rng-0 = 2
 
 [Config simulate]
-**.clients = ${1..25 step 2}
+**.clients = ${3..21 step 2}
 
 **.scenario = ${scenario= "A", "B", "C", "D"}
 **.serviceTimeConfig = ${config=1,2,3,4}
