--- a/code/omnet/simulations/test.ini
+++ b/code/omnet/simulations/test.ini
@@ -3,11 +3,15 @@ include omnetpp.ini
 [Config test]
 repeat = 10
 seed-set = ${repetition}
-warmup-period = 10s  
-sim-time-limit =60s
-**.disk.serviceTimeMean = 0.01
-**.processor.serviceTimeMean = 0.01
-**.remote_server.serviceTimeMean = 0.01
+
+sim-time-limit =7200s
+**.disk.serviceTimeMean = 1.00
+**.processor.serviceTimeMean = 1.00
+**.remote_server.serviceTimeMean = 1.00
+
+[Config test_warmup]
+extends = test
+**.clients = ${10,15,20,25}
 
 #Test correct behaviour (all messages returned to client immediately)
 [Config test_client]
