Modified simulations.ini and delay in network

--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -15,11 +15,11 @@ warmup-period = 600s
 [Config simulate]
 **.clients = ${3..21 step 2}
 
-**.scenario = ${scenario= "A", "B", "C", "D"}
-**.serviceTimeConfig = ${config=1,2,3,4}
+**.scenario = ${scenario= "s1", "s2", "s3", "s4"}
+**.serviceTimeConfig = ${config="c1","c2","c3","c4"}
 
-**.p1 = ${0.7,0.1,0.1,0.33 ! scenario}
-**.p2 = ${0.2,0.2,0.7,0.33 ! scenario}
+**.p1 = ${0.60,0.15,0.15,0.33 ! scenario}
+**.p2 = ${0.25,0.25,0.60,0.33 ! scenario}
 **.disk.serviceTimeMean = 			${0.1, 0.1  ,1.0  , 0.01 ! config}
 **.processor.serviceTimeMean = 		${0.1, 0.01 ,0.1  , 1.0 ! config}
 **.remote_server.serviceTimeMean = 	${0.1, 1.0  ,0.01 , 0.1 ! config}
