--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -5,7 +5,7 @@ debug-on-errors = false
 num-rngs = 3
 repeat = 10
 seed-set = ${repetition}
-sim-time-limit =4200s #6 hours + warmup
+sim-time-limit =4200s
 warmup-period = 600s
 
 **.disk[*].rng-0 = 0
