added sqlite file saving and fixed response time statistic collection

--- a/code/omnet/simulations/omnetpp.ini
+++ b/code/omnet/simulations/omnetpp.ini
@@ -3,6 +3,8 @@ network = Network
 debug-on-errors = false
 #1 rng per service center
 num-rngs = 3
+outputvectormanager-class="omnetpp::envir::SqliteOutputVectorManager"
+outputscalarmanager-class="omnetpp::envir::SqliteOutputScalarManager"
 
 **.disk[*].rng-0 = 0
 **.processor[*].rng-0 = 1
