Added results stored in SQLite format
Grouped by ini file!

--- a/code/omnet/simulations/omnetpp.ini
+++ b/code/omnet/simulations/omnetpp.ini
@@ -5,7 +5,8 @@ debug-on-errors = false
 num-rngs = 3
 outputvectormanager-class="omnetpp::envir::SqliteOutputVectorManager"
 outputscalarmanager-class="omnetpp::envir::SqliteOutputScalarManager"
-
+output-scalar-file-append = true
+output-vector-file-append = true
 **.disk[*].rng-0 = 0
 **.processor[*].rng-0 = 1
 **.remote_server.rng-0 = 2
