--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -8,6 +8,8 @@ seed-set = ${repetition}
 sim-time-limit =4200s
 warmup-period = 600s
 
+output-scalar-file = "results/simulate.sca"
+output-vector-file = "results/simulate.vec"
 **.disk[*].rng-0 = 0
 **.processor[*].rng-0 = 1
 **.remote_server.rng-0 = 2
