--- a/code/omnet/simulations/tuning.ini
+++ b/code/omnet/simulations/tuning.ini
@@ -1,12 +1,18 @@
 include omnetpp.ini
 
 [Config tuning]
+repeat = 10
+seed-set = ${repetition}
 sim-time-limit =3600s #1hour
 **.disk.serviceTimeMean = 0.1
 **.processor.serviceTimeMean = 0.1
 **.remote_server.serviceTimeMean = 0.1
 
+
+output-scalar-file = "results/tuning.sca"
+output-vector-file = "results/tuning.vec"
+
 [Config tuning_clients]
 extends = tuning
-**.clients = 20 #this number of clients give acceptable response time
+**.clients = ${1..35} 
 
