--- a/code/omnet/simulations/test.ini
+++ b/code/omnet/simulations/test.ini
@@ -11,12 +11,12 @@ sim-time-limit =3600s
 output-vector-file = "results/test.vec"
 output-scalar-file = "results/test.sca"
 
-[Config test_warmup]
+[Config test_client]
 extends = test
-**.clients = ${10,15,20,25}
+**.clients = ${1..35} 
 
 #Test correct behaviour (all messages returned to client immediately)
-[Config test_client]
+[Config test_processor]
 extends = test
 **.server.p1 = 1.0
 **.server.p2 = 0.0
