--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -8,6 +8,11 @@ seed-set = ${repetition}
 sim-time-limit =4200s
 warmup-period = 600s
 
+
+outputvectormanager-class="omnetpp::envir::SqliteOutputVectorManager"
+outputscalarmanager-class="omnetpp::envir::SqliteOutputScalarManager"
+output-scalar-file-append = true
+output-vector-file-append = true
 output-scalar-file = "results/simulate.sca"
 output-vector-file = "results/simulate.vec"
 **.disk[*].rng-0 = 0
