Added Simulation Queries
simulation queries

--- a/code/omnet/simulations/tuning.ini
+++ b/code/omnet/simulations/tuning.ini
@@ -16,3 +16,7 @@ output-vector-file = "results/tuning.vec"
 extends = tuning
 **.clients = ${1..35} 
 
+[Config tuning_warmup]
+extends = tuning
+**.clients = 21
+
