Clients from 1 to 21 with step 1

--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -20,7 +20,7 @@ output-vector-file = "results/simulate.vec"
 **.remote_server.rng-0 = 2
 
 [Config simulate]
-**.clients = ${3..21 step 2}
+**.clients = ${1..21}
 
 **.scenario = ${scenario= "s1", "s2", "s3", "s4"}
 **.serviceTimeConfig = ${config="c1","c2","c3","c4"}
