fix warmup time

--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -6,15 +6,15 @@ num-rngs = 3
 repeat = 10
 seed-set = ${repetition}
 sim-time-limit =3800s
-warmup-period = 200s
+warmup-period = 180s
 
 
 outputvectormanager-class="omnetpp::envir::SqliteOutputVectorManager"
 outputscalarmanager-class="omnetpp::envir::SqliteOutputScalarManager"
 output-scalar-file-append = true
 output-vector-file-append = true
-output-scalar-file = "results/simulate.sca"
-output-vector-file = "results/simulate.vec"
+output-scalar-file = "/media/nicola/DATI_SSD1/results/simulate.sca"
+output-vector-file = "/media/nicola/DATI_SSD1/results/simulate.vec"
 **.disk[*].rng-0 = 0
 **.processor[*].rng-0 = 1
 **.remote_server.rng-0 = 2
