stats only simulation

--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -13,8 +13,8 @@ outputvectormanager-class="omnetpp::envir::SqliteOutputVectorManager"
 outputscalarmanager-class="omnetpp::envir::SqliteOutputScalarManager"
 output-scalar-file-append = true
 output-vector-file-append = true
-output-scalar-file = "/media/nicola/DATI_SSD1/results/simulate.sca"
-output-vector-file = "/media/nicola/DATI_SSD1/results/simulate.vec"
+output-scalar-file = "results/simulate.sca"
+output-vector-file = "results/simulate.vec"
 **.disk[*].rng-0 = 0
 **.processor[*].rng-0 = 1
 **.remote_server.rng-0 = 2
@@ -23,14 +23,14 @@ output-vector-file = "/media/nicola/DATI_SSD1/results/simulate.vec"
 **.clients = ${1..21}
 
 **.scenario = ${scenario= "s1", "s2", "s3", "s4"}
-**.serviceTimeConfig = ${config="c1","c2","c3","c4"}
+**.serviceTimeConfig = ${config="c1","c2","c3","c4","c5","c6","c7","c8"}
 
 **.p1 = ${0.34,0.60,0.15,0.15 ! scenario}
 **.p2 = ${0.33,0.25,0.60,0.25 ! scenario}
-**.processor.serviceTimeMean = 		${0.01, 0.001 ,0.001  , 0.1 ! config}
-**.disk.serviceTimeMean = 			${0.01, 0.01  ,0.1  , 0.01 ! config}
-**.remote_server.serviceTimeMean = 	${0.01, 0.1  ,0.1 , 0.001 ! config}
 
+**.processor.serviceTimeMean = 		${0.001, 0.001 ,0.001  , 0.001, 0.01, 0.01, 0.01, 0.01 ! config}
+**.disk.serviceTimeMean = 			${0.01, 0.1  ,0.01  , 0.1,0.01  , 0.1, 0.01  , 0.1 ! config}
+**.remote_server.serviceTimeMean = 	${0.1 , 1.0   ,1.0 , 0.1,0.1 ,  1.0   ,1.0 , 0.1 ! config}
 
  
 
