--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -5,6 +5,8 @@ debug-on-errors = false
 num-rngs = 3
 repeat = 10
 seed-set = ${repetition}
+
+#Guardare warmup
 sim-time-limit =3800s
 warmup-period = 180s
 
@@ -19,18 +21,20 @@ output-vector-file = "results/simulate.vec"
 **.processor[*].rng-0 = 1
 **.remote_server.rng-0 = 2
 
+
 [Config simulate]
+#dopo test_client 
 **.clients = ${1..21}
 
 **.scenario = ${scenario= "s1", "s2", "s3", "s4"}
 **.serviceTimeConfig = ${config="c1","c2","c3","c4","c5","c6","c7","c8"}
 
-**.p1 = ${0.34,0.60,0.15,0.15 ! scenario}
+**.p1 = ${0.34,0.60,0.25,0.15 ! scenario}
 **.p2 = ${0.33,0.25,0.60,0.25 ! scenario}
 
-**.processor.serviceTimeMean = 		${0.001, 0.001 ,0.001  , 0.001, 0.01, 0.01, 0.01, 0.01 ! config}
-**.disk.serviceTimeMean = 			${0.01, 0.1  ,0.01  , 0.1,0.01  , 0.1, 0.01  , 0.1 ! config}
-**.remote_server.serviceTimeMean = 	${0.1 , 1.0   ,1.0 , 0.1,0.1 ,  1.0   ,1.0 , 0.1 ! config}
+**.processor.serviceTimeMean = 		${0.01, 0.01 ,0.01, 0.01, 0.1, 0.1, 0.1, 0.1 ! config}
+**.disk.serviceTimeMean = 			${0.1 , 1.0  ,0.1 , 1.0 , 0.1, 1.0, 0.1, 1.0 ! config}
+**.remote_server.serviceTimeMean = 	${0.1 , 1.0  ,1.0 , 0.1 , 0.1, 1.0, 1.0, 0.1 ! config}
 
  
 
