--- a/code/omnet/simulations/test.ini
+++ b/code/omnet/simulations/test.ini
@@ -11,6 +11,7 @@ sim-time-limit =3600s
 output-vector-file = "results/test.vec"
 output-scalar-file = "results/test.sca"
 
+#Continuity test
 [Config test_client]
 extends = test
 **.clients = ${1..35} 
