--- a/code/omnet/simulations/tuning.ini
+++ b/code/omnet/simulations/tuning.ini
@@ -4,19 +4,19 @@ include omnetpp.ini
 repeat = 10
 seed-set = ${repetition}
 sim-time-limit =3600s #1hour
-**.disk.serviceTimeMean = 1.0
-**.processor.serviceTimeMean = 1.0
-**.remote_server.serviceTimeMean = 1.0
 
+**.processor.serviceTimeMean = 0.01
+**.disk.serviceTimeMean = 0.1
+**.remote_server.serviceTimeMean = 0.1
 
 output-scalar-file = "results/tuning.sca"
 output-vector-file = "results/tuning.vec"
 
 [Config tuning_clients]
 extends = tuning
-**.clients = 21 
+**.clients = ${1..100 step 3}
 
 [Config tuning_warmup]
 extends = tuning
-**.clients = 21
+**.clients = 21 #Guardare a che nclient si stabilizza il throughput
 
