--- a/code/omnet/simulations/tuning.ini
+++ b/code/omnet/simulations/tuning.ini
@@ -5,9 +5,9 @@ repeat = 10
 seed-set = ${repetition}
 sim-time-limit =3600s #1hour
 
-**.processor.serviceTimeMean = 0.01
-**.disk.serviceTimeMean = 0.1
-**.remote_server.serviceTimeMean = 0.1
+**.processor.serviceTimeMean = 0.1
+**.disk.serviceTimeMean = 1.0
+**.remote_server.serviceTimeMean = 1.0
 
 output-scalar-file = "results/tuning.sca"
 output-vector-file = "results/tuning.vec"
@@ -17,6 +17,9 @@ extends = tuning
 **.clients = ${1..100 step 3}
 
 [Config tuning_warmup]
+**.processor.serviceTimeMean = 0.1
+**.disk.serviceTimeMean = 1.0
+**.remote_server.serviceTimeMean = 1.0
 extends = tuning
-**.clients = 21 #Guardare a che nclient si stabilizza il throughput
+**.clients = 50 
 
