--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -7,9 +7,8 @@ repeat = 10
 seed-set = ${repetition}
 
 #Guardare warmup
-sim-time-limit =3800s
-warmup-period = 180s
-
+sim-time-limit =4800s
+warmup-period = 1200s
 
 outputvectormanager-class="omnetpp::envir::SqliteOutputVectorManager"
 outputscalarmanager-class="omnetpp::envir::SqliteOutputScalarManager"
@@ -23,7 +22,7 @@ output-vector-file = "results/simulate.vec"
 
 [Config simulate]
 #dopo test_client 
-**.clients = ${1..21}
+**.clients = ${1..50 step 2}
 
 **.scenario = ${scenario= "s1", "s2", "s3", "s4"}
 **.serviceTimeConfig = ${config="c1","c2","c3","c4","c5","c6","c7","c8"}
