--- a/code/omnet/simulations/simulations.ini
+++ b/code/omnet/simulations/simulations.ini
@@ -34,7 +34,21 @@ output-vector-file = "results/simulate.vec"
 **.disk.serviceTimeMean = 			${0.1 , 1.0  ,0.1 , 1.0 , 0.1, 1.0, 0.1, 1.0 ! config}
 **.remote_server.serviceTimeMean = 	${0.1 , 1.0  ,1.0 , 0.1 , 0.1, 1.0, 1.0, 0.1 ! config}
 
- 
+[Config simulateS1]
+repeat = 30
+**.scenario = "s1"
+**.p1 = 0.34
+**.p2 = 0.33
+**.clients = 49
+output-scalar-file = "results/simulates1.sca"
+output-vector-file = "results/simulates1.vec"
+
+**.serviceTimeConfig = ${config="c1","c2","c3","c4","c5","c6","c7","c8"}
+
+**.processor.serviceTimeMean = 		${0.01, 0.01 ,0.01, 0.01, 0.1, 0.1, 0.1, 0.1 ! config}
+**.disk.serviceTimeMean = 			${0.1 , 1.0  ,0.1 , 1.0 , 0.1, 1.0, 0.1, 1.0 ! config}
+**.remote_server.serviceTimeMean = 	${0.1 , 1.0  ,1.0 , 0.1 , 0.1, 1.0, 1.0, 0.1 ! config}
+
 
 
 
